# indie-games-website-simulator

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  build-wasm.sh
assets/: load_balancer.xcf  load_scenario.xcf  request.xcf  request_new.xcf  request_purchase.xcf  server.xcf  tutorial.xcf
examples/: queues.rs
src/: assets.rs  dragging.rs  full_game.rs  game_stats.rs  level_select.rs  levels.rs  lib.rs  load_balancer.rs  load_scenarios.rs  main.rs  misc.rs  prelude.rs  requests.rs  results.rs  selection.rs  server.rs  splash.rs  states.rs  ui.rs
web-src/: index.html
