[package]
name = "indie-games-website-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.1.2"
bevy = "0.14.1"
bevy-trait-query-0-14-0 = "0.6.2"
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
# bevy_editor_pls = "0.9.0"
bevy_framepace = "0.17.1"
bevy_mod_picking = "0.20.1"
# bevy_particle_systems = "0.13.0"
bevy_tweening = {version="0.11.0", features = ["bevy_ui"]}
rand = "0.8.5"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
codegen-units = 1
strip = true
lto = "fat"
panic = "abort"
